// MOCKNEAT BUILD FILE

buildscript() {
    repositories {
        jcenter()
    }
    dependencies {
        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
    }
}

plugins {
    id "com.github.johnrengelman.shadow" version "1.2.4"
    id "com.jfrog.bintray" version "1.7.3"
    id "net.ltgt.errorprone" version "0.0.10"
}

apply plugin: 'java'
apply plugin: "net.ltgt.errorprone"clea

group 'net.andreinc'
version '0.0.9'

sourceCompatibility = 1.8


repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.22'
    //compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.6.1'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
    compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
    compile group: 'com.github.mifmif', name: 'generex', version: '1.0.2'
    compile group: 'net.andreinc.aleph', name: 'aleph-formatter', version: '0.0.3'
    compile group: 'com.google.errorprone', name: 'error_prone_annotations', version: '2.0.19'


    testCompile group: 'junit', name: 'junit', version: '4.4'
    testCompile group: 'commons-validator', name: 'commons-validator', version: '1.5.1'
}

apply from: 'install.gradle'
apply from: 'bintray.gradle'